Fix IE 11 not showing the navbar logo.

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -57,6 +57,7 @@
         color: $teal;
 
         @media (min-width: 992px) {
+            -ms-flex: 0 1 100%;
             margin: 0 7rem;
         }
 
